k8s/portainer/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer-service
  namespace: portainer
  labels:
    app: portainer
spec:
  ports:
    - name: http
      port: 9000
      targetPort: 9000
  selector:
    app: portainer
  type: ClusterIP
