k8s/portainer/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  namespace: portainer
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - portainer.empleadomisionvuelo.app
      secretName: portainer-tls-secret
  rules:
    - host: portainer.empleadomisionvuelo.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portainer-service
                port:
                  number: 9000
